--- a/src/Ezac.Roster.Web/Components/Pages/MemberOverview.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/MemberOverview.razor
@@ -6,49 +6,9 @@
 
 @if (members != null && permissions != null)
 {
-	<table class="table table-bordered" style="border-color:black">
-		<thead>
-			<tr>
-				<th>Naam</th>
-				<th>Email</th>
-				<th>Inschaling</th>
-				@foreach (var permission in permissions)
-				{
-					<th>@permission.Name</th>
-				}
-				<th>Acties</th>
-			</tr>
-		</thead>
-		<tbody>
-			@foreach (var member in members)
-			{
-				<EditableTableRow member="member" permissions="permissions" />
-			}
-		</tbody>
-	</table>
+	<MemberTable members="members" permissions="permissions" DeleteUser="HandleDeleteUser"/>
 
-	<form @onsubmit="CreateUser">
-		<div class="form-group">
-			<label for="name">Naam</label>
-			<input type="text" id="name" @bind="Name" class="form-control" required/>
-		</div>
-		<div class="form-group">
-			<label for="email">Email</label>
-			<input type="email" id="email" @bind="Email" class="form-control" required/>
-		</div>
-		<div class="form-group">
-			<label for="scale">Inschaling</label>
-			<input type="number" min="0" step="0.1" id="scale" class="form-control" required @bind="Scaling">
-		</div>
-		@foreach (var permission in permissions)
-		{
-			<div class="form-group">
-				<label for="@permission.Name">@permission.Name</label>
-				<input type="number" min="0" max="10" id="@permission.Name" class="form-control" required @bind="PermissionValues[permission.Id]">
-			</div>
-		}
-		<button type="submit" class="btn btn-primary">Voeg nieuw lid toe</button>
-	</form>
+	<MemberForm CreateUser="CreateUser" permissions="permissions" PermissionValues="PermissionValues" />
 }
 else
 {
@@ -58,10 +18,6 @@ else
 @code {
 	private List<User> members;
 	private List<Permission> permissions;
-
-	private string Name { get; set; }
-	private string Email { get; set; }
-	private double Scaling { get; set; }
 	private Dictionary<Guid, int> PermissionValues { get; set; } = new Dictionary<Guid, int>();
 
 	protected async override Task OnInitializedAsync()
@@ -100,22 +56,22 @@ else
 		}
 	}
 
-	private async Task CreateUser()
+	private async Task CreateUser((string Name, string Email, double Scaling) userInfo)
 	{
 		var user = new UserCreateRequestModel
-		{
-			Name = Name,
-			Email = Email,
-			Scaling = Scaling,
-			Jobs = new List<Job>(),
-			Preferences = new List<Preference>(),
-			Permissions = PermissionValues.Select(pv => new UserPermission
 			{
-				Id = Guid.NewGuid(),
-				PermissionId = pv.Key,
-				Experience = pv.Value
-			}).ToList()
-		};
+				Name = userInfo.Name,
+				Email = userInfo.Email,
+				Scaling = userInfo.Scaling,
+				Jobs = new List<Job>(),
+				Preferences = new List<Preference>(),
+				Permissions = PermissionValues.Select(pv => new UserPermission
+				{
+					Id = Guid.NewGuid(),
+					PermissionId = pv.Key,
+					Experience = pv.Value
+				}).ToList()
+			};
 
 		var result = await UserService.AddAsync(user);
 		if (result.IsSucces)
