Add emailservice to list page #122

--- a/src/Ezac.Roster.Web/Components/_Imports.razor
+++ b/src/Ezac.Roster.Web/Components/_Imports.razor
@@ -11,6 +11,7 @@
 @using MudBlazor
 @using Ezac.Roster.Domain.Entities
 @using Ezac.Roster.Domain.Interfaces.Services
+@using Ezac.Roster.Domain.Services
 @using Ezac.Roster.Web.Components.Components
 @using Ezac.Roster.Web.Models
 @using Ezac.Roster.Domain.Models
