--- a/src/Ezac.Roster.Web/Components/Pages/Home.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/Home.razor
@@ -45,32 +45,10 @@
 
     private async Task Login()
     {
-        if (Password == "ezac")
+        if (string.IsNullOrWhiteSpace(UserName) || string.IsNullOrWhiteSpace(Password))
         {
-            var users = await UserService.GetAllAsync();
-            var user = users.Value.FirstOrDefault(u => u.Name == UserName);
-            if (user != null)
-            {
-                if (user.IsAdmin == true)
-                {
-
-                    Message = "Logging in";
-                    LogInBooLService.IsLoggedIn = true;
-                    NavigationManager.NavigateTo("/calendarslist");
-                }
-                else
-                {
-                    Message = "U heeft geen adminrechten";
-                }
-            }
-            else
-            {
-                Message = "Gebruiker bestaat niet";
-            }
-        }
-        else
-        {
-            Message = "Wachtwoord is onjuist";
+            Message = "Gelieve een gebruikersnaam en wachtwoord in te vullen";
+            return;
         }
     }
 
