Add if to check if the password is correct same as hardcoded #152

--- a/src/Ezac.Roster.Web/Components/Pages/Home.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/Home.razor
@@ -47,7 +47,7 @@
 
     private async Task Login()
     {
-        if (Password == "ezac")
+        if (Password == HardcodedPassword)
         {
             var users = await UserService.GetAllAsync();
             var user = users.Value.FirstOrDefault(u => u.Name == UserName);
